--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="JurosSimples"/>
 	<classpathentry kind="src" path="JurosCompostos"/>
 	<classpathentry kind="src" path="Strings"/>
+	<classpathentry kind="src" path="Classes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
