Aula aula apostila 238

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,12 @@
 	<classpathentry kind="src" path="JurosCompostos"/>
 	<classpathentry kind="src" path="Strings"/>
 	<classpathentry kind="src" path="Classes"/>
+	<classpathentry kind="src" path="Listas"/>
+	<classpathentry kind="src" path="Herancas"/>
+	<classpathentry kind="src" path="Polimorfismo"/>
+	<classpathentry kind="src" path="API"/>
+	<classpathentry kind="src" path="CRUD"/>
+	<classpathentry kind="src" path="Laboratorio"/>
+	<classpathentry kind="src" path="Gerente"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
